# quill

./: Cargo.toml  LICENSE  README.md
examples/: investment_growth.rs  line.rs  line_graph.rs  logarithmic.rs  monthly_sales.rs  scatter.rs  weather.rs
examples/line/: main.rs
examples/test/: main.rs
src/: color.rs  lib.rs  line.rs  plot.rs  prelude.rs  quill.rs  series.rs  traits.rs
src/draw/: axis.rs  data_series.rs  label.rs  legend.rs  mod.rs  ticks_and_grids.rs
src/elements/: axis.rs  grid.rs  interpolation.rs  legend.rs  line.rs  marker.rs  minor_grid.rs  mod.rs  range.rs  scale.rs  tick.rs
src/style/: axis.rs  grid.rs  grid_new.rs  label.rs  legend.rs  margin.rs  mod.rs  tick.rs  title.rs
templates/: line.typ  line.typ.tera
