[package]
name = "quill"
version = "0.1.6"
edition = "2024"
description = "A lightweight Rust plotting library for creating simple SVG 2D plots"
license = "Apache-2.0"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
repository = "https://github.com/Ryan-D-Gast/quill"
homepage = "https://github.com/Ryan-D-Gast/quill"
documentation = "https://docs.rs/quill"
readme = "README.md"
keywords = ["plotting", "svg", "charts", "graphs", "visualization"]
categories = ["visualization", "graphics"]

[features]
default = []
png = ["resvg", "tiny-skia"]

[dependencies]
bon = "3.6.3"
svg = "0.13"
resvg = { version = "0.45.1", optional = true }
tiny-skia = { version = "0.11.4", optional = true }

[dev-dependencies]
quill = { path = ".", features = ["png"] } 